--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@ html, body {
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: all 0.4s ease;
 }
 
 .video-wrapper video {
@@ -57,6 +56,7 @@ html, body {
   z-index: 100;
 }
 
+/* PLAY / PAUSE */
 .play-overlay {
   position: absolute;
   width: 64px;
@@ -67,7 +67,7 @@ html, body {
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  z-index: 20;
+  z-index: 30;
 }
 
 .play-overlay.play::after {
@@ -95,6 +95,31 @@ html, body {
   pointer-events: auto;
 }
 
+/* PRZEWIJANIE */
+.seek-btn {
+  position: absolute;
+  top: 50%;
+  width: 48px;
+  height: 48px;
+  background: rgba(255,255,255,0.7);
+  border-radius: 50%;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  font-size: 22px;
+  color: #F8AC10;
+  cursor: pointer;
+  z-index: 35;
+}
+
+.seek-btn.left { left: 14px; }
+.seek-btn.right { right: 14px; }
+
+.video-wrapper.active:hover .seek-btn {
+  display: flex;
+}
+
+/* CLOSE */
 .close-btn {
   position: absolute;
   top: 12px;
@@ -108,13 +133,14 @@ html, body {
   align-items: center;
   font-size: 22px;
   cursor: pointer;
-  z-index: 30;
+  z-index: 40;
 }
 
 .video-wrapper.active .close-btn {
   display: flex;
 }
 
+/* PROGRESS */
 .progress-bar-container {
   position: absolute;
   bottom: 10px;
@@ -124,7 +150,7 @@ html, body {
   background: rgba(255,255,255,0.3);
   border-radius: 3px;
   cursor: pointer;
-  z-index: 25;
+  z-index: 30;
 }
 
 .progress-bar {
@@ -139,7 +165,6 @@ html, body {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, 1fr);
   }
-
   .video-wrapper.active {
     width: 90%;
     height: 85%;
@@ -152,39 +177,52 @@ html, body {
 
 <div class="videos-container">
 
+  <!-- POWIEL TEN BLOK 6x -->
   <div class="video-wrapper">
     <video src="videos/video1.mp4"></video>
     <div class="play-overlay play"></div>
+    <div class="seek-btn left">◀</div>
+    <div class="seek-btn right">▶</div>
     <div class="close-btn">✕</div>
   </div>
 
   <div class="video-wrapper">
     <video src="videos/video2.mp4"></video>
     <div class="play-overlay play"></div>
+    <div class="seek-btn left">◀</div>
+    <div class="seek-btn right">▶</div>
     <div class="close-btn">✕</div>
   </div>
 
   <div class="video-wrapper">
     <video src="videos/video3.mp4"></video>
     <div class="play-overlay play"></div>
+    <div class="seek-btn left">◀</div>
+    <div class="seek-btn right">▶</div>
     <div class="close-btn">✕</div>
   </div>
 
   <div class="video-wrapper">
     <video src="videos/video4.mp4"></video>
     <div class="play-overlay play"></div>
+    <div class="seek-btn left">◀</div>
+    <div class="seek-btn right">▶</div>
     <div class="close-btn">✕</div>
   </div>
 
   <div class="video-wrapper">
     <video src="videos/video5.mp4"></video>
     <div class="play-overlay play"></div>
+    <div class="seek-btn left">◀</div>
+    <div class="seek-btn right">▶</div>
     <div class="close-btn">✕</div>
   </div>
 
   <div class="video-wrapper">
     <video src="videos/video6.mp4"></video>
     <div class="play-overlay play"></div>
+    <div class="seek-btn left">◀</div>
+    <div class="seek-btn right">▶</div>
     <div class="close-btn">✕</div>
   </div>
 
@@ -196,83 +234,84 @@ let activeWrapper = null;
 
 function closeActiveVideo() {
   if(!activeWrapper) return;
-
   activeWrapper.querySelector('video').pause();
 
   wrappers.forEach(w => {
     w.classList.remove('active','inactive');
     const o = w.querySelector('.play-overlay');
     o.className = 'play-overlay play';
-    o.style.display = 'flex';
     removeProgress(w);
   });
 
   activeWrapper = null;
 }
 
-function removeProgress(wrapper) {
-  wrapper.querySelectorAll('.progress-bar-container').forEach(p => p.remove());
+function removeProgress(w) {
+  w.querySelectorAll('.progress-bar-container').forEach(p => p.remove());
 }
 
-function addProgress(wrapper, video) {
-  removeProgress(wrapper);
+function addProgress(w, v) {
+  removeProgress(w);
+  const c = document.createElement('div');
+  c.className = 'progress-bar-container';
+  const b = document.createElement('div');
+  b.className = 'progress-bar';
+  c.appendChild(b);
+  w.appendChild(c);
 
-  const container = document.createElement('div');
-  container.className = 'progress-bar-container';
-  const bar = document.createElement('div');
-  bar.className = 'progress-bar';
-
-  container.appendChild(bar);
-  wrapper.appendChild(container);
-
-  container.onclick = e => {
-    const r = container.getBoundingClientRect();
-    video.currentTime = ((e.clientX - r.left) / r.width) * video.duration;
+  c.onclick = e => {
+    const r = c.getBoundingClientRect();
+    v.currentTime = ((e.clientX - r.left) / r.width) * v.duration;
   };
 
-  video.addEventListener('timeupdate', () => {
-    bar.style.width = (video.currentTime / video.duration * 100) + '%';
+  v.addEventListener('timeupdate', () => {
+    b.style.width = (v.currentTime / v.duration * 100) + '%';
   });
 }
 
-wrappers.forEach(wrapper => {
-  const video = wrapper.querySelector('video');
-  const overlay = wrapper.querySelector('.play-overlay');
-  const closeBtn = wrapper.querySelector('.close-btn');
+wrappers.forEach(w => {
+  const v = w.querySelector('video');
+  const overlay = w.querySelector('.play-overlay');
+  const left = w.querySelector('.seek-btn.left');
+  const right = w.querySelector('.seek-btn.right');
+  const close = w.querySelector('.close-btn');
 
   overlay.onclick = e => {
     e.stopPropagation();
 
-    if(activeWrapper && activeWrapper !== wrapper) return;
-
     if(!activeWrapper){
-      wrappers.forEach(w => {
-        if(w !== wrapper) w.classList.add('inactive');
-      });
-
-      wrapper.classList.add('active');
-      activeWrapper = wrapper;
-      video.play();
-      addProgress(wrapper, video);
+      wrappers.forEach(x => { if(x !== w) x.classList.add('inactive'); });
+      w.classList.add('active');
+      activeWrapper = w;
+      v.play();
       overlay.classList.replace('play','pause');
+      addProgress(w, v);
     } else {
-      if(video.paused){
-        video.play();
+      if(v.paused){
+        v.play();
         overlay.classList.replace('play','pause');
       } else {
-        video.pause();
+        v.pause();
         overlay.classList.replace('pause','play');
       }
     }
   };
 
-  video.onclick = () => {
-    if(activeWrapper === wrapper){
-      overlay.onclick(new Event('click'));
-    }
+  v.onclick = () => {
+    if(activeWrapper === w) overlay.onclick(new Event('click'));
   };
 
-  closeBtn.onclick = e => {
+  left.onclick = e => {
+    e.stopPropagation();
+    v.currentTime = Math.max(0, v.currentTime - 5);
+  };
+
+  right.onclick = e => {
+    e.stopPropagation();
+    v.currentTime = Math.min(v.duration, v.currentTime + 5);
+  };
+
+  close.onclick = e => {
     e.stopPropagation();
     closeActiveVideo();
   };
