--- a/index.html
+++ b/index.html
@@ -239,12 +239,27 @@ const container = document.querySelector('.videos-container');
 const wrappers = document.querySelectorAll('.video-wrapper');
 let activeWrapper = null;
 
-/* MINIATURKI Z 2 SEKUNDY */
+/* MINIATURKI Z 2 SEKUNDY BEZ ZMIANY STARTU WIDEO */
 wrappers.forEach(w => {
   const v = w.querySelector('video');
-  v.preload = 'metadata';
-  v.addEventListener('loadedmetadata', () => {
-    if(v.duration > 2) v.currentTime = 2;
+
+  // Tworzymy tymczasowe wideo do snapshot
+  const temp = document.createElement('video');
+  temp.src = v.src;
+  temp.muted = true;
+  temp.preload = 'metadata';
+  temp.addEventListener('loadedmetadata', () => {
+    const snapTime = Math.min(2, temp.duration);
+    temp.currentTime = snapTime;
+  });
+
+  temp.addEventListener('seeked', () => {
+    const canvas = document.createElement('canvas');
+    canvas.width = temp.videoWidth;
+    canvas.height = temp.videoHeight;
+    const ctx = canvas.getContext('2d');
+    ctx.drawImage(temp, 0, 0, canvas.width, canvas.height);
+    v.setAttribute('poster', canvas.toDataURL('image/jpeg'));
   });
 });
 
