--- a/index.html
+++ b/index.html
@@ -2,297 +2,97 @@
 <html lang="pl">
 <head>
 <meta charset="UTF-8">
-<title>Video Grid Safari Friendly</title>
-
+<title>Video Grid Safari</title>
 <style>
-html, body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  background: #000;
-  overflow: hidden;
-  font-family: sans-serif;
-}
-
-.videos-container {
-  width: 95vw;
-  height: 95vh;
-  margin: 0 auto;
-  padding: 20px 0;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  gap: 12px;
-  position: relative;
-}
-
-.video-wrapper {
-  position: relative;
-  border-radius: 12px;
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.video-wrapper video {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-  background: #000;
-}
-
-.video-wrapper.inactive video {
-  filter: blur(4px) brightness(0.35);
-}
-
-.video-wrapper.active {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 66%;
-  height: 90%;
-  transform: translate(-50%, -50%);
-  z-index: 100;
-}
-
-/* PLAY / PAUSE */
-.play-overlay {
-  position: absolute;
-  width: 64px;
-  height: 64px;
-  background: rgba(255,255,255,0.7);
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  z-index: 30;
-}
-
-.play-overlay.play::after {
-  content: "";
-  border-left: 22px solid #F8AC10;
-  border-top: 14px solid transparent;
-  border-bottom: 14px solid transparent;
-}
-
-.play-overlay.pause::after {
-  content: "";
-  width: 18px;
-  height: 22px;
-  border-left: 6px solid #F8AC10;
-  border-right: 6px solid #F8AC10;
-}
-
-.video-wrapper.active .play-overlay {
-  opacity: 0;
-  pointer-events: none;
-}
-
-.video-wrapper.active:hover .play-overlay {
-  opacity: 1;
-  pointer-events: auto;
-}
-
-/* PRZEWIJANIE */
-.seek-btn {
-  position: absolute;
-  top: 50%;
-  width: 48px;
-  height: 48px;
-  background: rgba(255,255,255,0.7);
-  border-radius: 50%;
-  display: none;
-  justify-content: center;
-  align-items: center;
-  font-size: 22px;
-  color: #F8AC10;
-  cursor: pointer;
-  z-index: 35;
-}
-
-.seek-btn.left { left: 14px; }
-.seek-btn.right { right: 14px; }
-
-.video-wrapper.active:hover .seek-btn {
-  display: flex;
-}
-
-/* CLOSE */
-.close-btn {
-  position: absolute;
-  top: 12px;
-  right: 12px;
-  width: 36px;
-  height: 36px;
-  background: rgba(255,255,255,0.75);
-  border-radius: 50%;
-  display: none;
-  justify-content: center;
-  align-items: center;
-  font-size: 22px;
-  cursor: pointer;
-  z-index: 40;
-}
-
-.video-wrapper.active .close-btn {
-  display: flex;
-}
-
-/* PROGRESS */
-.progress-bar-container {
-  position: absolute;
-  bottom: 10px;
-  left: 10px;
-  right: 10px;
-  height: 6px;
-  background: rgba(255,255,255,0.3);
-  border-radius: 3px;
-  cursor: pointer;
-  z-index: 30;
-}
-
-.progress-bar {
-  height: 100%;
-  width: 0%;
-  background: #F8AC10;
-  border-radius: 3px;
-}
-
-/* UKRYJ BUTTONY NIEAKTYWNYCH VIDEO GDY JEST AKTYWNE */
+html, body { margin:0; padding:0; width:100%; height:100%; background:#000; overflow:hidden; font-family:sans-serif; }
+.videos-container { width:95vw; height:95vh; margin:0 auto; padding:20px 0; display:grid; grid-template-columns:repeat(3,1fr); grid-template-rows:repeat(2,1fr); gap:12px; position:relative; }
+.video-wrapper { position:relative; border-radius:12px; overflow:hidden; display:flex; justify-content:center; align-items:center; }
+.video-wrapper video { width:100%; height:100%; object-fit:contain; background:#000; }
+.video-wrapper.inactive video { filter: blur(4px) brightness(0.35); }
+.video-wrapper.active { position:absolute; top:50%; left:50%; width:66%; height:90%; transform:translate(-50%,-50%); z-index:100; }
+.play-overlay { position:absolute; width:64px; height:64px; background:rgba(255,255,255,0.7); border-radius:50%; display:flex; justify-content:center; align-items:center; cursor:pointer; z-index:30; }
+.play-overlay.play::after { content:""; border-left:22px solid #F8AC10; border-top:14px solid transparent; border-bottom:14px solid transparent; }
+.play-overlay.pause::after { content:""; width:18px; height:22px; border-left:6px solid #F8AC10; border-right:6px solid #F8AC10; }
+.video-wrapper.active .play-overlay { opacity:0; pointer-events:none; }
+.video-wrapper.active:hover .play-overlay { opacity:1; pointer-events:auto; }
+.seek-btn { position:absolute; top:50%; width:48px; height:48px; background:rgba(255,255,255,0.7); border-radius:50%; display:none; justify-content:center; align-items:center; font-size:22px; color:#F8AC10; cursor:pointer; z-index:35; }
+.seek-btn.left { left:14px; }
+.seek-btn.right { right:14px; }
+.video-wrapper.active:hover .seek-btn { display:flex; }
+.close-btn { position:absolute; top:12px; right:12px; width:36px; height:36px; background:rgba(255,255,255,0.75); border-radius:50%; display:none; justify-content:center; align-items:center; font-size:22px; cursor:pointer; z-index:40; }
+.video-wrapper.active .close-btn { display:flex; }
+.progress-bar-container { position:absolute; bottom:10px; left:10px; right:10px; height:6px; background:rgba(255,255,255,0.3); border-radius:3px; cursor:pointer; z-index:30; }
+.progress-bar { height:100%; width:0%; background:#F8AC10; border-radius:3px; }
 .videos-container.has-active .video-wrapper:not(.active) .play-overlay,
-.videos-container.has-active .video-wrapper:not(.active) .seek-btn {
-  display: none;
-}
-
-@media (max-width: 900px) {
-  .videos-container {
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-  }
-  .video-wrapper.active {
-    width: 90%;
-    height: 85%;
-  }
-}
+.videos-container.has-active .video-wrapper:not(.active) .seek-btn { display:none; }
+@media(max-width:900px){.videos-container{grid-template-columns:repeat(2,1fr);grid-template-rows:repeat(3,1fr);}.video-wrapper.active{width:90%;height:85%;}}
 </style>
 </head>
-
 <body>
 
 <div class="videos-container">
-
   <div class="video-wrapper"><video src="videos/video1.mp4" playsinline muted preload="metadata"></video><div class="play-overlay play"></div><div class="seek-btn left">◀</div><div class="seek-btn right">▶</div><div class="close-btn">✕</div></div>
   <div class="video-wrapper"><video src="videos/video2.mp4" playsinline muted preload="metadata"></video><div class="play-overlay play"></div><div class="seek-btn left">◀</div><div class="seek-btn right">▶</div><div class="close-btn">✕</div></div>
   <div class="video-wrapper"><video src="videos/video3.mp4" playsinline muted preload="metadata"></video><div class="play-overlay play"></div><div class="seek-btn left">◀</div><div class="seek-btn right">▶</div><div class="close-btn">✕</div></div>
   <div class="video-wrapper"><video src="videos/video4.mp4" playsinline muted preload="metadata"></video><div class="play-overlay play"></div><div class="seek-btn left">◀</div><div class="seek-btn right">▶</div><div class="close-btn">✕</div></div>
   <div class="video-wrapper"><video src="videos/video5.mp4" playsinline muted preload="metadata"></video><div class="play-overlay play"></div><div class="seek-btn left">◀</div><div class="seek-btn right">▶</div><div class="close-btn">✕</div></div>
   <div class="video-wrapper"><video src="videos/video6.mp4" playsinline muted preload="metadata"></video><div class="play-overlay play"></div><div class="seek-btn left">◀</div><div class="seek-btn right">▶</div><div class="close-btn">✕</div></div>
-
 </div>
 
 <script>
-const container = document.querySelector('.videos-container');
-const wrappers = document.querySelectorAll('.video-wrapper');
-let activeWrapper = null;
+const container=document.querySelector('.videos-container');
+const wrappers=document.querySelectorAll('.video-wrapper');
+let activeWrapper=null;
 
-/* MINIATURKI Z 2 SEKUNDY (Safari Friendly) */
-wrappers.forEach(w => {
-  const v = w.querySelector('video');
-  const temp = document.createElement('video');
-  temp.src = v.src;
-  temp.muted = true;
-  temp.playsInline = true;
-  temp.preload = 'metadata';
-  temp.style.display = 'none';
-  document.body.appendChild(temp);
-
-  temp.addEventListener('loadeddata', () => {
-    temp.currentTime = Math.min(2, temp.duration);
-  });
-
-  temp.addEventListener('seeked', () => {
-    const canvas = document.createElement('canvas');
-    canvas.width = temp.videoWidth;
-    canvas.height = temp.videoHeight;
-    canvas.getContext('2d').drawImage(temp, 0, 0, canvas.width, canvas.height);
-    v.setAttribute('poster', canvas.toDataURL('image/jpeg'));
-    temp.remove();
-  });
-});
-
-function closeActiveVideo() {
-  if(!activeWrapper) return;
-
+function closeActiveVideo(){
+  if(!activeWrapper)return;
   activeWrapper.querySelector('video').pause();
   container.classList.remove('has-active');
-
-  wrappers.forEach(w => {
+  wrappers.forEach(w=>{
     w.classList.remove('active','inactive');
-    w.querySelector('.play-overlay').className = 'play-overlay play';
-    w.querySelectorAll('.progress-bar-container').forEach(p => p.remove());
+    w.querySelector('.play-overlay').className='play-overlay play';
+    w.querySelectorAll('.progress-bar-container').forEach(p=>p.remove());
   });
-
-  activeWrapper = null;
+  activeWrapper=null;
 }
 
-wrappers.forEach(w => {
-  const v = w.querySelector('video');
-  const overlay = w.querySelector('.play-overlay');
-  const left = w.querySelector('.seek-btn.left');
-  const right = w.querySelector('.seek-btn.right');
-  const close = w.querySelector('.close-btn');
+wrappers.forEach(w=>{
+  const v=w.querySelector('video');
+  const overlay=w.querySelector('.play-overlay');
+  const left=w.querySelector('.seek-btn.left');
+  const right=w.querySelector('.seek-btn.right');
+  const close=w.querySelector('.close-btn');
 
-  overlay.onclick = e => {
+  overlay.onclick=e=>{
     e.stopPropagation();
-
     if(!activeWrapper){
       container.classList.add('has-active');
-      wrappers.forEach(x => { if(x !== w) x.classList.add('inactive'); });
+      wrappers.forEach(x=>{if(x!==w)x.classList.add('inactive');});
       w.classList.add('active');
-      activeWrapper = w;
+      activeWrapper=w;
       v.play();
       overlay.classList.replace('play','pause');
-      addProgress(w, v);
-    } else if(activeWrapper === w){
-      if(v.paused){
-        v.play();
-        overlay.classList.replace('play','pause');
-      } else {
-        v.pause();
-        overlay.classList.replace('pause','play');
-      }
+      addProgress(w,v);
+    }else if(activeWrapper===w){
+      if(v.paused){v.play();overlay.classList.replace('play','pause');}
+      else{v.pause();overlay.classList.replace('pause','play');}
     }
   };
 
-  left.onclick = e => { e.stopPropagation(); v.currentTime = Math.max(0, v.currentTime - 5); };
-  right.onclick = e => { e.stopPropagation(); v.currentTime = Math.min(v.duration, v.currentTime + 5); };
-  close.onclick = e => { e.stopPropagation(); closeActiveVideo(); };
+  left.onclick=e=>{e.stopPropagation();v.currentTime=Math.max(0,v.currentTime-5);}
+  right.onclick=e=>{e.stopPropagation();v.currentTime=Math.min(v.duration,v.currentTime+5);}
+  close.onclick=e=>{e.stopPropagation();closeActiveVideo();}
 });
 
-function addProgress(w, v){
-  const c = document.createElement('div');
-  c.className = 'progress-bar-container';
-  const b = document.createElement('div');
-  b.className = 'progress-bar';
-  c.appendChild(b);
-  w.appendChild(c);
-
-  c.onclick = e => {
-    const r = c.getBoundingClientRect();
-    v.currentTime = ((e.clientX - r.left) / r.width) * v.duration;
-  };
-
-  v.addEventListener('timeupdate', () => {
-    b.style.width = (v.currentTime / v.duration * 100) + '%';
-  });
+function addProgress(w,v){
+  const c=document.createElement('div');c.className='progress-bar-container';
+  const b=document.createElement('div');b.className='progress-bar';
+  c.appendChild(b);w.appendChild(c);
+  c.onclick=e=>{const r=c.getBoundingClientRect();v.currentTime=((e.clientX-r.left)/r.width)*v.duration;}
+  v.addEventListener('timeupdate',()=>{b.style.width=(v.currentTime/v.duration*100)+'%';});
 }
 
-document.addEventListener('keydown', e => {
-  if(e.key === 'Escape') closeActiveVideo();
-});
+document.addEventListener('keydown',e=>{if(e.key==='Escape')closeActiveVideo();});
 </script>
 
 </body>
