--- a/index.html
+++ b/index.html
@@ -2,29 +2,29 @@
 <html lang="pl">
 <head>
 <meta charset="UTF-8">
-<title>Video Grid Safari</title>
+<title>Video Grid Universal</title>
 <style>
-html, body { margin:0; padding:0; width:100%; height:100%; background:#000; overflow:hidden; font-family:sans-serif; }
-.videos-container { width:95vw; height:95vh; margin:0 auto; padding:20px 0; display:grid; grid-template-columns:repeat(3,1fr); grid-template-rows:repeat(2,1fr); gap:12px; position:relative; }
-.video-wrapper { position:relative; border-radius:12px; overflow:hidden; display:flex; justify-content:center; align-items:center; }
-.video-wrapper video { width:100%; height:100%; object-fit:contain; background:#000; }
-.video-wrapper.inactive video { filter: blur(4px) brightness(0.35); }
-.video-wrapper.active { position:absolute; top:50%; left:50%; width:66%; height:90%; transform:translate(-50%,-50%); z-index:100; }
-.play-overlay { position:absolute; width:64px; height:64px; background:rgba(255,255,255,0.7); border-radius:50%; display:flex; justify-content:center; align-items:center; cursor:pointer; z-index:30; }
-.play-overlay.play::after { content:""; border-left:22px solid #F8AC10; border-top:14px solid transparent; border-bottom:14px solid transparent; }
-.play-overlay.pause::after { content:""; width:18px; height:22px; border-left:6px solid #F8AC10; border-right:6px solid #F8AC10; }
-.video-wrapper.active .play-overlay { opacity:0; pointer-events:none; }
-.video-wrapper.active:hover .play-overlay { opacity:1; pointer-events:auto; }
-.seek-btn { position:absolute; top:50%; width:48px; height:48px; background:rgba(255,255,255,0.7); border-radius:50%; display:none; justify-content:center; align-items:center; font-size:22px; color:#F8AC10; cursor:pointer; z-index:35; }
-.seek-btn.left { left:14px; }
-.seek-btn.right { right:14px; }
-.video-wrapper.active:hover .seek-btn { display:flex; }
-.close-btn { position:absolute; top:12px; right:12px; width:36px; height:36px; background:rgba(255,255,255,0.75); border-radius:50%; display:none; justify-content:center; align-items:center; font-size:22px; cursor:pointer; z-index:40; }
-.video-wrapper.active .close-btn { display:flex; }
-.progress-bar-container { position:absolute; bottom:10px; left:10px; right:10px; height:6px; background:rgba(255,255,255,0.3); border-radius:3px; cursor:pointer; z-index:30; }
-.progress-bar { height:100%; width:0%; background:#F8AC10; border-radius:3px; }
+html, body {margin:0; padding:0; width:100%; height:100%; background:#000; overflow:hidden; font-family:sans-serif;}
+.videos-container {width:95vw; height:95vh; margin:0 auto; padding:20px 0; display:grid; grid-template-columns:repeat(3,1fr); grid-template-rows:repeat(2,1fr); gap:12px; position:relative;}
+.video-wrapper {position:relative; border-radius:12px; overflow:hidden; display:flex; justify-content:center; align-items:center;}
+.video-wrapper video {width:100%; height:100%; object-fit:contain; background:#000;}
+.video-wrapper.inactive video {filter: blur(4px) brightness(0.35);}
+.video-wrapper.active {position:absolute; top:50%; left:50%; width:66%; height:90%; transform:translate(-50%,-50%); z-index:100;}
+.play-overlay {position:absolute; width:64px; height:64px; background:rgba(255,255,255,0.7); border-radius:50%; display:flex; justify-content:center; align-items:center; cursor:pointer; z-index:30;}
+.play-overlay.play::after {content:""; border-left:22px solid #F8AC10; border-top:14px solid transparent; border-bottom:14px solid transparent;}
+.play-overlay.pause::after {content:""; width:18px; height:22px; border-left:6px solid #F8AC10; border-right:6px solid #F8AC10;}
+.video-wrapper.active .play-overlay {opacity:0; pointer-events:none;}
+.video-wrapper.active:hover .play-overlay {opacity:1; pointer-events:auto;}
+.seek-btn {position:absolute; top:50%; width:48px; height:48px; background:rgba(255,255,255,0.7); border-radius:50%; display:none; justify-content:center; align-items:center; font-size:22px; color:#F8AC10; cursor:pointer; z-index:35;}
+.seek-btn.left {left:14px;}
+.seek-btn.right {right:14px;}
+.video-wrapper.active:hover .seek-btn {display:flex;}
+.close-btn {position:absolute; top:12px; right:12px; width:36px; height:36px; background:rgba(255,255,255,0.75); border-radius:50%; display:none; justify-content:center; align-items:center; font-size:22px; cursor:pointer; z-index:40;}
+.video-wrapper.active .close-btn {display:flex;}
+.progress-bar-container {position:absolute; bottom:10px; left:10px; right:10px; height:6px; background:rgba(255,255,255,0.3); border-radius:3px; cursor:pointer; z-index:30;}
+.progress-bar {height:100%; width:0%; background:#F8AC10; border-radius:3px;}
 .videos-container.has-active .video-wrapper:not(.active) .play-overlay,
-.videos-container.has-active .video-wrapper:not(.active) .seek-btn { display:none; }
+.videos-container.has-active .video-wrapper:not(.active) .seek-btn {display:none;}
 @media(max-width:900px){.videos-container{grid-template-columns:repeat(2,1fr);grid-template-rows:repeat(3,1fr);}.video-wrapper.active{width:90%;height:85%;}}
 </style>
 </head>
